--- a/src/components/SignIn/style.css
+++ b/src/components/SignIn/style.css
@@ -2,4 +2,19 @@
     margin: auto;
     width: 50vw;
     min-width: 300px;
+    border: 1px solid #aaaaaa;
+    padding: 100px 50px;
+    border-radius: 10px;
+    margin-top:40px;
+}
+
+.SignIn form {
+    margin: auto;
+    min-width: 150px;
+}
+
+.SignIn form input {
+    width: 100%;
+    padding: 10px 5px;
+    text-align: center;
 }
