--- a/src/components/MessageBox/style.css
+++ b/src/components/MessageBox/style.css
@@ -6,7 +6,11 @@
     border-radius: 5px;
 }
 
-.MessageBox-negative {
+.MessageBox-false {
     background: #ff5454;
     
+}
+
+.MessageBox-true{
+    background: #080;
 }
