--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
-dl, dt, dd, ol, ul, li,
+dl, dt, dd, ol, ul, 
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed, 
@@ -26,7 +26,7 @@ footer, header, hgroup, menu, nav, section {
 body {
     line-height: 1;
 }
-ol, ul {
+ol {
     list-style: none;
 }
 blockquote, q {
@@ -42,6 +42,28 @@ table {
     border-spacing: 0;
 }
 
+.App h1 {
+    text-align: left;
+    margin-left: 450px;
+}
+
+.App p {
+    margin-bottom: 20px;
+}
+
+.App li {
+    margin-left: 40px;
+}
+
+.App .right-side {
+    margin-left: 350px;
+}
+
+#article-logo {
+    width: 200px;
+    margin-left: 100px;
+    float: left;
+}
 
 /* TABLE */
 table tr{ padding: 5px 5px;}
@@ -80,7 +102,12 @@ body {
 
 h1 {
   text-align: center;
+  font-size: 150%;
+  margin-bottom: 20px;
+  font-weight: bold;
 }
+
+
 
 .app_root {
     padding: 10px 10px;
