--- a/src/components/EditableRow/style.css
+++ b/src/components/EditableRow/style.css
@@ -2,13 +2,12 @@
     min-width: 100px !important;
 }
 
-@keyframes fadeIn {
-    from { background: rgba(0,0,0,0); }
-    to { background: rgba(0,0,0,0.2); }
-}
-
 .editMode {
     background: rgba(0,0,0,0.2);
-    animation-name: fadeIn;
-    animation-duration: 1s;
+    transition: background-color 0.5s ease-in;
+}
+
+.reviewMode {
+    background: rgba(0,0,0,0);
+    transition: background-color 0.5s ease-in;
 }
