--- a/src/components/EditableRow/style.css
+++ b/src/components/EditableRow/style.css
@@ -11,3 +11,11 @@
     background: rgba(0,0,0,0);
     transition: background-color 0.5s ease-in;
 }
+
+.requiredMark {
+    color: red;
+}
+
+.InnerMessages{
+    clear:both;
+}
