--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -41,7 +45,6 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
-
 .App h1 {
     text-align: left;
     margin-left: 450px;
@@ -152,4 +155,15 @@ td, tr, th {
 
 .inline {
     display: inline-block;
+}
+
+
+
+
+input:hover {
+    opacity: 0.9;
+}
+
+input[type="Submit"], button {
+    cursor:pointer;
 }
