--- a/src/components/EditableRow/style.css
+++ b/src/components/EditableRow/style.css
@@ -31,3 +31,20 @@
 .required input {
     border: 1px yellow solid;
 }
+
+.link {
+    text-decoration: none;
+    padding: 5px 10px;
+    border-radius: 3px;
+    border: 0;
+    -webkit-box-shadow: 0px 0px 3px grey;
+    box-shadow: 0px 0px 3px grey;
+    min-width: 200px;
+    margin: auto;
+    margin-bottom: 5px;
+    background-color: buttonface;
+    font: 400 13.3333px Arial;
+    color: black;
+    display: inline-block;
+    text-align: center;
+}
